--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-<h1>test</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>New Material Discovery</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<h1>New Material Found by AI Could Reduce Lithium Use in Batteries</h1>
+<p class="date">Published 2 hours ago</p>
+
+<p class="lead"><strong>Samples of the new solid electrolyte discovered by Microsoft AI and HPC tools</strong></p>
+<img src="Images/image.jpg" alt="Samples of the new solid electrolyte discovered by Microsoft AI and HPC tools">
+
+<p><strong>By Shiona McCallum</strong><br>Technology reporter</p>
+
+<p>A brand new substance, which could reduce lithium use in batteries, has been discovered using artificial intelligence (AI) and supercomputing.</p>
+
+<p>The findings were made by Microsoft and the Pacific Northwest National Laboratory (PNNL), which is part of the US Department of Energy.</p>
+
+<p>Scientists say the material could potentially reduce lithium use by up to 70%.</p>
+
+<p>Since its discovery, the new material has been used to power a lightbulb.</p>
+
+<p>Microsoft researchers used AI and supercomputers to narrow down 32 million potential inorganic materials to 18 promising candidates in less than a week - a screening process that could have taken more than two decades to carry out using traditional lab research methods.</p>
+
+<p>The process from inception to the development of a working battery prototype took less than nine months.</p>
+
+<p>The two organizations achieved this by using advanced AI and high-performance computing which combines large numbers of computers to solve complex scientific and mathematical tasks.</p>
+
+<blockquote>
+    <p>Executive vice president of Microsoft, Jason Zander, told the BBC one of the tech giant's missions was to "compress 250 years of scientific discovery into the next 25".</p>
+    <p>"And we think technology like this will help us do that. This is the way that this type of science I think is going to get done in the future," he said.</p>
+</blockquote>
+
+
+
+
+<p class="date">Published on: 12.5.2019</p>
+<p class="date">Author: Shiona McCallum</p>
+
+<a href="#" target="_blank">Learn more</a>
+
+</body>
+</html>
